# aifa-quant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  PROJECT_REPORT.md  README.md  SECURITY.md  __init__.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily_signal.yml  web-ci.yml
aifa_quant/: __init__.py
aifa_quant/analysis/: __init__.py  (+3 more)
backtest/: engine.py  metrics.py
cli/: main.py
core/: interfaces.py
docs/: DATA.md  EXECUTION_PROMPTS.md  INTEGRATION_ROADMAP.md  METRICS.md  OPTIMIZATION_NOTES.md  PAPER_TRADING.md  REVIEW_FIX_NOTES.md  ROADMAP.md  WEBSITE_TASK.md  index.md
execution/: __init__.py
features/: __init__.py  builder.py  selection.py  technical.py
models/: __init__.py  lgb_ranker.py  rolling_trainer.py
notebooks/: quickstart.ipynb
scripts/: check_no_secrets.py  create_sample_db.py  daily_refresh.bat  daily_refresh.py  export_backtest_to_web.py  export_source_data.py  fetch_csi300_symbols.py  fix_paper_tables.py  import_source_data.py  parameter_search.py  push_to_supabase.py  resume_akshare_update.py  setup_scheduler.ps1  shap_analysis.py  update_fundamentals.py  update_index_data.py  update_market_caps.py  update_stock_names.py
signals-web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
strategy/: __init__.py  topk_dropout.py
supabase/: schema.sql
tests/: test_adapter.py  test_akshare_adapter.py  test_akshare_macro.py  test_backtest.py  test_core_interfaces.py  test_cv.py  test_ensemble.py  test_features.py  test_labels.py  test_news_sentiment.py  test_optimizer.py  test_p1_modules.py  test_paper_trading.py  test_review_fixes.py  test_rolling_trainer.py  test_storage.py  test_strategy.py
web/: .backend-features.json  .env.example  .gitignore  DEPLOY.md  Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  vitest.config.ts  web-README.md
(+129 files in other folders)
